--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,8 +1,8 @@
 const { resolve } = require('path')
 
 module.exports = {
-  config: resolve(__dirname,'src', 'config', 'database.js'),
-  'models-path': (__dirname,'src', 'app', 'models'),
-  'migrations-path': (__dirname,'src', 'database', 'migrations'),
-  'seeders-path': (__dirname,'src', 'database', 'seeders'),
-  }
+  config: resolve(__dirname, 'src', 'config', 'database.js'),
+  'models-path': resolve(__dirname, 'src', 'app', 'models'),
+  'migrations-path': resolve(__dirname, 'src', 'database', 'migration'),
+  'seeders-path': resolve(__dirname, 'src', 'database', 'seeds'),
+}
